# demo_vm_serialserver

./: .gitmodules  CMakeLists.txt  README.md  vm_serial_server.camkes
plat/qemu-arm-virt/: plat.camkes  plat.cmake
